# codefresh-demo

./: Cargo.toml  Dockerfile  Dockerfile.test  README.md  app.js  codefresh.yml  package.json  server.js  start.sh  test.js
lib/: usermock.js  users.js
sample-app/: codefresh.Dockerfile  docker-compose.yml  package.json
src/: main.rs
test/: test.js
tests/: unit_test.rs
