[package]
name = "rust-docker-web"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
wiremock = "0.5"
surf = "*"
async-std = { version = "1", features = ["attributes"] }

[profile.release]
panic = 'abort'

[profile.dev]
debug = 0